--- a/Keeper.client/index.html
+++ b/Keeper.client/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5260/5260065.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Marko+One&family=Oxygen:wght@300;400;700&display=swap"
+    rel="stylesheet">
   <title>
     Keepr
   </title>
